fixing header z-index

--- a/css/main.css
+++ b/css/main.css
@@ -1775,6 +1775,11 @@ a.separator {
   margin-top: 25px;
 }
 
+header {
+  position: relative;
+  z-index: 1;
+}
+
 .banner--hero__content {
   display: -webkit-box;
   display: -ms-flexbox;
